--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</style>
     </head>
     <body>
-        <img src="/img/psm_banner.png">
+        <img src="./img/psm_banner.png">
         <br />
         <h2>Pride Sports Marketing Home Page</h2>
     </body>
